[tool.poetry]
name = "dating-backend"
version = "0.1.0"
description = "Backend for dating app"
authors = ["Andrii Kulishov <andryxakulishow@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
