[tool.poetry]
name = "dating-backend"
version = "0.1.0"
description = "Backend for dating app"
authors = ["Andrii Kulishov <andryxakulishow@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
dishka = "^1.2.0"
aiogram = "^3.10.0"
environs = "^11.0.0"
sqlalchemy = "^2.0.31"
asyncpg = "^0.29.0"
alembic = "^1.13.2"
greenlet = "^3.0.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
